# website-change-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alert_if_missing_text.py  check_changes.py  detect_website_changes.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup_cronjob.py  test_notifications.py
helpers/: homeassistant.py
website_change_tracker/: __init__.py  alert_if_missing_text.py  detect_website_changes.py
website_change_tracker/helpers/: homeassistant.py  telegram.py
