[project]
name = "website-change-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Federico Giancarelli",email = "hello@federicogiancarelli.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Disable packaging for this project; use Poetry only for dependency management.
package-mode = false
